viya/sas-bases/overlays/network/istio/serviceentry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: public-serviceentry
spec:
  hosts:
  - $(INGRESS_HOST)
  location: MESH_EXTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
